<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storeparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ahmed.garrab.activities.Store"
    tools:showIn="@layout/activity_store">

    <LinearLayout
        android:id="@+id/storechild1"
        android:layout_width="378dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:text="@string/filter1"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <Button
            android:id="@+id/priceb"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:background="#c1bdbd"
            android:text="@string/price" />

        <Button
            android:id="@+id/brandb"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="0.21"
            android:background="#c1bdbd"
            android:text="@string/brand" />

        <Button
            android:id="@+id/both"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="103dp"
            android:layout_height="68dp"
            android:background="#c1bdbd"
            android:text="Both" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/storechild2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/Storelist"
            android:layout_width="match_parent"
            android:layout_height="429dp"
            android:layout_gravity="center_horizontal"
            android:background="#d7d5d5" />
    </LinearLayout>
</LinearLayout>
